--- a/translate.css
+++ b/translate.css
@@ -1,6 +1,6 @@
 .translate{
-	padding-left:10px;
-	padding-right:10px;
+	padding-left:10px!important;
+	padding-right:10px!important;
 }
 #translate-dropdown-menu{
 	display:none;
