--- a/translate.css
+++ b/translate.css
@@ -26,6 +26,8 @@
 }
 
 @-webkit-keyframes flag-down {
-    from {top: 0px;}
-    to {top: 50px;}
+	0%,10% {-webkit-transform:translateY(0);}
+	90%,100%{-webkit-transform:translateY(-50);}
+    /*from {top: 0px;}
+    to {top: 50px;}*/
 }
