--- a/translate.css
+++ b/translate.css
@@ -18,27 +18,35 @@
 #translate-dropdown-menu>ul li {
 	list-style-type:none;
 }*/
-
-.lang-text {
-	-webkit-animation: lang-in 5s infinite;
+.fa-language {
+	color:#2e6d9d;
+	-webkit-animation: lang-out 5s infinite;
+	-webkit-animation-direction: alternate;
+}
+.flag-icon-br {
+	-webkit-animation: brazil-in 5s infinite;
 	-webkit-animation-direction: alternate;
 	opacity: 0;
 }
 
-.flag-icon {
-	-webkit-animation: flag-out 5s infinite;
+.flag-icon-ve {
+	-webkit-animation: venezuela-out 5s infinite;
 	-webkit-animation-direction: alternate;
+	opcity: 1;
 }
 
-@-webkit-keyframes lang-in {
-	0%,10% {opacity:0;}
-	90%,100%{opacity:1;}
+@-webkit-keyframes lang-out {
+	0%,33% {opacity:1;}
+	34%,100% {opacity:0;}   
 }
 
-@-webkit-keyframes flag-out {
-	0% {opacity:1;}
-	10% {opacity:0;}
-	/*90%
-	100%{opacity:0;}*/
-    
+@-webkit-keyframes brazil-in {
+	0%,33% {opacity:0;}
+	34%,65% {opacity:1;}
+	66%,100% {opacity:0;}
+}
+
+@-webkit-keyframes venezuela-in {
+	0%,65% {opacity:0;}
+	66%,100% {opacity:1;}
 }
