--- a/translate.css
+++ b/translate.css
@@ -36,6 +36,22 @@
 }
 
 @-webkit-keyframes lang-out {
+	0%,30% {translateY:0;}
+	40%,100% {translateY:50;}   
+}
+
+@-webkit-keyframes brazil-in {
+	0%,30% {opacity:0;}
+	40%,70% {opacity:1;}
+	80%,100% {opacity:0;}
+}
+
+@-webkit-keyframes venezuela-in {
+	0%,70% {opacity:0;}
+	80%,100% {opacity:1;}
+}
+
+/*@-webkit-keyframes lang-out {
 	0%,30% {opacity:1;}
 	40%,100% {opacity:0;}   
 }
@@ -49,4 +65,4 @@
 @-webkit-keyframes venezuela-in {
 	0%,70% {opacity:0;}
 	80%,100% {opacity:1;}
-}
+}*/
