--- a/translate.css
+++ b/translate.css
@@ -36,8 +36,8 @@
 }
 
 @-webkit-keyframes lang-out {
-	0%,30% {translateY:0px;}
-	40%,100% {translateY:50px;}   
+	0%,30% {-webkit-transform:translateY(0px);}
+	40%,100% {-webkit-transform:translateY(50px);}   
 }
 
 @-webkit-keyframes brazil-in {
